[gd_scene load_steps=18 format=2]

[ext_resource path="res://ui/scripts/MainHUD.gd" type="Script" id=1]
[ext_resource path="res://ui/shaders/advanced_glass.shader" type="Shader" id=2]
[ext_resource path="res://ui/shaders/console_body.shader" type="Shader" id=3]
[ext_resource path="res://ui/shaders/console_button.shader" type="Shader" id=4]
[ext_resource path="res://ui/shaders/stylized_progress.shader" type="Shader" id=5]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/blur_amount = 4.0
shader_param/bg_color = Color( 0.0627451, 0.0980392, 0.133333, 0.6 )
shader_param/border_color = Color( 1, 1, 1, 0.1 )
shader_param/corner_radius = 1.0
shader_param/border_width = 1.0

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 5 )
shader_param/value = 0.75
shader_param/bar_color = Color( 0.937255, 0.266667, 0.266667, 1 )
shader_param/bg_color = Color( 0, 0, 0, 0.5 )
shader_param/glow_color = Color( 0.937255, 0.266667, 0.266667, 0.6 )

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 5 )
shader_param/value = 0.5
shader_param/bar_color = Color( 0.231373, 0.513726, 0.964706, 1 )
shader_param/bg_color = Color( 0, 0, 0, 0.5 )
shader_param/glow_color = Color( 0.231373, 0.513726, 0.964706, 0.6 )

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 3 )
shader_param/top_color = Color( 0.117647, 0.160784, 0.231373, 0.95 )
shader_param/bottom_color = Color( 0.0588235, 0.0901961, 0.164706, 1 )
shader_param/border_width = 1.0
shader_param/border_color = Color( 1, 1, 1, 0.15 )
shader_param/blur_amount = 4.0

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 4 )
shader_param/color_top = Color( 0.278431, 0.333333, 0.411765, 1 )
shader_param/color_bottom = Color( 0.0588235, 0.0901961, 0.164706, 1 )
shader_param/corner_radius = 0.5

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 4 )
shader_param/color_top = Color( 0.937255, 0.266667, 0.266667, 1 )
shader_param/color_bottom = Color( 0.6, 0.105882, 0.105882, 1 )
shader_param/corner_radius = 0.5

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 2 )
shader_param/blur_amount = 4.0
shader_param/bg_color = Color( 0.0627451, 0.0980392, 0.133333, 0.6 )
shader_param/border_color = Color( 1, 1, 1, 0.1 )
shader_param/corner_radius = 0.2
shader_param/border_width = 1.0

[node name="MainHUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackBufferCopy" type="BackBufferCopy" parent="."]
copy_mode = 2

[node name="Header" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = 84.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseBtn" type="ColorRect" parent="Header"]
material = SubResource( 1 )
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )

[node name="Label" type="Label" parent="Header/PauseBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "||"
align = 1
valign = 1

[node name="StatusBars" type="VBoxContainer" parent="Header"]
margin_left = 80.0
margin_right = 320.0
margin_bottom = 60.0
rect_min_size = Vector2( 240, 0 )
custom_constants/separation = 8

[node name="HealthBar" type="ColorRect" parent="Header/StatusBars"]
material = SubResource( 7 )
margin_right = 240.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )

[node name="Fill" type="ColorRect" parent="Header/StatusBars/HealthBar"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 35.0
margin_top = 8.0
margin_right = -50.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ManaBar" type="ColorRect" parent="Header/StatusBars/HealthBar"]
material = SubResource( 7 )
margin_top = 40.0
margin_right = 240.0
margin_bottom = 62.0
rect_min_size = Vector2( 0, 22 )
rect_scale = Vector2( 0.85, 1 )

[node name="Fill" type="ColorRect" parent="Header/StatusBars/HealthBar/ManaBar"]
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 6.0
margin_right = -45.0
margin_bottom = -6.0

[node name="Currency" type="HBoxContainer" parent="Header"]
margin_left = 340.0
margin_right = 1152.0
margin_bottom = 60.0
size_flags_horizontal = 3
alignment = 2
custom_constants/separation = 15

[node name="Diamonds" type="ColorRect" parent="Header/Currency"]
material = SubResource( 1 )
margin_left = 587.0
margin_right = 687.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 40 )

[node name="Label" type="Label" parent="Header/Currency/Diamonds"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "45"
align = 1
valign = 1

[node name="Gold" type="ColorRect" parent="Header/Currency"]
material = SubResource( 1 )
margin_left = 702.0
margin_right = 812.0
margin_bottom = 60.0
rect_min_size = Vector2( 110, 40 )

[node name="Label" type="Label" parent="Header/Currency/Gold"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "12,450"
align = 1
valign = 1

[node name="Sidebar" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 16.0
margin_top = -120.0
margin_right = 76.0
margin_bottom = 120.0
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Backpack" type="ColorRect" parent="Sidebar"]
material = SubResource( 7 )
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )

[node name="Badge" type="ColorRect" parent="Sidebar/Backpack"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -15.0
margin_top = -5.0
margin_right = 5.0
margin_bottom = 15.0
color = Color( 0.937255, 0.266667, 0.266667, 1 )

[node name="Map" type="ColorRect" parent="Sidebar"]
material = SubResource( 7 )
margin_top = 72.0
margin_right = 60.0
margin_bottom = 132.0
rect_min_size = Vector2( 60, 60 )

[node name="Social" type="ColorRect" parent="Sidebar"]
material = SubResource( 7 )
margin_top = 144.0
margin_right = 60.0
margin_bottom = 204.0
rect_min_size = Vector2( 60, 60 )

[node name="Settings" type="ColorRect" parent="Sidebar"]
material = SubResource( 7 )
margin_top = 216.0
margin_right = 60.0
margin_bottom = 276.0
rect_min_size = Vector2( 60, 60 )

[node name="LeftConsole" type="ColorRect" parent="."]
material = SubResource( 4 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = -220.0
margin_right = 420.0
margin_bottom = -20.0
rect_min_size = Vector2( 380, 200 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoystickWell" type="ColorRect" parent="LeftConsole"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = -90.0
margin_right = 200.0
margin_bottom = 90.0
rect_min_size = Vector2( 180, 180 )
color = Color( 0, 0, 0, 0.4 )

[node name="Handle" type="ColorRect" parent="LeftConsole/JoystickWell"]
material = SubResource( 5 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 50, 50 )

[node name="Shortcuts" type="Control" parent="LeftConsole"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -75.0
margin_right = -10.0
margin_bottom = 75.0

[node name="Bolt" type="ColorRect" parent="LeftConsole/Shortcuts"]
material = SubResource( 5 )
margin_left = 50.0
margin_right = 100.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )

[node name="Shield" type="ColorRect" parent="LeftConsole/Shortcuts"]
material = SubResource( 5 )
margin_left = 50.0
margin_top = 100.0
margin_right = 100.0
margin_bottom = 150.0

[node name="LocalMap" type="ColorRect" parent="LeftConsole/Shortcuts"]
material = SubResource( 5 )
margin_top = 50.0
margin_right = 50.0
margin_bottom = 100.0

[node name="Inventory" type="ColorRect" parent="LeftConsole/Shortcuts"]
material = SubResource( 5 )
margin_left = 100.0
margin_top = 50.0
margin_right = 150.0
margin_bottom = 100.0

[node name="RightConsole" type="ColorRect" parent="."]
material = SubResource( 4 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -420.0
margin_top = -220.0
margin_right = -40.0
margin_bottom = -20.0
rect_min_size = Vector2( 380, 200 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Actions" type="Control" parent="RightConsole"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 10.0
margin_top = -75.0
margin_right = 160.0
margin_bottom = 75.0

[node name="Fire" type="ColorRect" parent="RightConsole/Actions"]
material = SubResource( 5 )
margin_left = 50.0
margin_right = 100.0
margin_bottom = 50.0

[node name="Jump" type="ColorRect" parent="RightConsole/Actions"]
material = SubResource( 5 )
margin_left = 50.0
margin_top = 100.0
margin_right = 100.0
margin_bottom = 150.0

[node name="Magic" type="ColorRect" parent="RightConsole/Actions"]
material = SubResource( 5 )
margin_top = 50.0
margin_right = 50.0
margin_bottom = 100.0

[node name="Attack" type="ColorRect" parent="RightConsole/Actions"]
material = SubResource( 6 )
margin_left = 95.0
margin_top = 45.0
margin_right = 155.0
margin_bottom = 105.0

[node name="CamJoystickWell" type="ColorRect" parent="RightConsole"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -140.0
margin_right = -20.0
margin_bottom = 40.0
rect_min_size = Vector2( 180, 180 )
color = Color( 0, 0, 0, 0.4 )

[node name="Handle" type="ColorRect" parent="RightConsole/CamJoystickWell"]
material = SubResource( 5 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 50, 50 )
